<resources>
    <string name="app_name">UniLoveLetters</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latin_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae iaculis lectus. Curabitur ac congue neque. Praesent rhoncus dictum posuere. Morbi accumsan volutpat lobortis. Cras gravida urna vitae dictum commodo. Aliquam efficitur leo mattis, tristique augue at, sagittis sapien. Mauris aliquam nibh at sem ullamcorper cursus. Vivamus nisi mauris, molestie non purus id, tincidunt laoreet lectus. Nunc sagittis nec mi non interdum. Duis felis lorem, euismod eget elit sed, finibus hendrerit libero. Proin pretium ex metus, vitae pharetra odio sodales vel. Aenean iaculis nisi in leo porttitor, ut mattis velit rutrum. Sed et nibh nibh. Sed purus sem, egestas vitae enim ac, consequat dictum ipsum.</string>
    <string name="title_activity_submit_post">New Post</string>
    <string name="title_of_post">Title</string>
    <string name="title_of_post_hint">FUCK you UNSW</string>
    <string name="body_of_post">Body</string>
    <string name="body_of_post_hint">I hate UNSW and USYD FUCk this shi</string>
    <string name="type_of_post">Category</string>
    <string name="uni_of_post">University</string>
    <string name="submit_button">Submit</string>

    <string-array name="types_of_posts">
        <item>Love Letter</item>
        <item>Rant</item>
        <item>Confession</item>
        <item>Advice</item>
    </string-array>

    <string-array name="universities_array">
        <item>UNSW</item>
        <item>USYD</item>
        <item>UTS</item>
        <item>University of Ben</item>
    </string-array>
</resources>
